fixed spacing on rank/weeks

--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -92,8 +92,9 @@ a {
 
 .rank-week-div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: auto;
+    align-items: center;
 }
 
 .weeks_on_list {
@@ -110,16 +111,24 @@ a {
     // left: 52;
     font-size: 24;
     font-weight: 400;
+    padding-left: 20px;
 }
 
+// .weeks_on_list {
+//     margin-left: 40px;
+// }
+
 .weeks_on_list > p {
+    margin-left: 6px;
+    padding-top: 4;
     font-style: italic;
     font-size: 13;
-    width: 50;
+    width: 100;
     font-weight: 400;
 }
 
 .rank > p {
+    margin: 2px;
     padding-top: 4;
     font-style: italic;
     font-size: 13;
